[project]
name = "md"
version = "0.0.5"
description = "simple markdown viewer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich",
    "pygments",
]

[project.scripts]
md = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "md_theme"]
